--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,1 +1,2 @@
-@import url('~minireset.css/minireset.css');
+@import url("~minireset.css/minireset.css");
+@import url("http://fonts.cdnfonts.com/css/pokemon-solid");
