--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,2 +1,3 @@
 @import url("~minireset.css/minireset.css");
 @import url("http://fonts.cdnfonts.com/css/pokemon-solid");
+@import url("https://fonts.googleapis.com/css2?family=Stylish&display=swap");
