--- a/app/styles/PokemonApp.css
+++ b/app/styles/PokemonApp.css
@@ -2,6 +2,7 @@ body {
   background-color: black;
   color: white;
   text-align: center;
+  overflow-x: hidden;
 }
 
 .flop {
@@ -44,4 +45,19 @@ body {
 .right {
   animation: rightfighting 1s ease-in 1s 2 alternate;
   transition: animation 1s ease-in-out;
+}
+
+.slider_container {
+  margin: 0 auto;
+  padding: 10px;
+  width: 95%;
+  color: #333;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 7rem;
 }
